Fix mobile overflow issue with tables and footer logos

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -143,11 +143,11 @@ a:visited {
     clear: both;
     width: calc(100% - 2px);
     vertical-align: middle;
+    overflow: hidden;
 }
 
 #footer img {
-    height: 50px;
-    width: auto;
+    max-width: 80%;
 }
 
 #footer a {
@@ -466,10 +466,21 @@ button:active {
 
 /* TABLES */
 
+.table-container {
+    width: 100%;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    display: block;
+    max-width: 100vw;
+    margin: 0 -3em;  /* Compensate for any parent padding */
+    padding: 0 3em;  /* Add inner padding to maintain alignment */
+}
+
 table {
     border-collapse: collapse;
     margin-top: 1.5em;
     border-bottom: 1px solid #1F74AD;
+    width: 100%;
 }
 
 
@@ -582,6 +593,11 @@ padding: 10px;
     .challenge,
     .participation {
         width: 80%;
+    }
+
+    #footer a {
+        display: block;
+        line-height: 2em;
     }
     
 }
